first day set up

--- a/frontend/bonfyr/package.json
+++ b/frontend/bonfyr/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "micromodal": "^0.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-modal": "^3.8.1",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
+    "react-uikit-modal": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
